// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditorialBlob component should render correctly 1`] = `
<View>
  <View
    style={
      Object {
        "paddingHorizontal": 8,
      }
    }
  >
    <AtomComponent
      style={
        Object {
          "paddingTop": 8,
        }
      }
      weight="bold"
    />
    <AtomComponent
      style={
        Object {
          "paddingTop": 8,
        }
      }
    />
  </View>
  <AtomComponent
    textAlign="center"
  />
  <View
    style={
      Array [
        Object {
          "paddingTop": 8,
        },
        Object {
          "paddingHorizontal": 8,
        },
      ]
    }
  >
    <AtomComponent
      contentItemId={undefined}
      group={Object {}}
      trackAction="build:app:article:editorialsectioncta"
    >
      <AtomComponent
        color="secondary"
        style={
          Object {
            "alignSelf": "flex-start",
            "borderColor": "#B1B2B4",
            "borderWidth": 1,
            "padding": 8,
          }
        }
        text="test"
        weight="bold"
      />
    </AtomComponent>
  </View>
</View>
`;

exports[`EditorialBlob component should render correctly with media_image 1`] = `
<View>
  <View
    style={
      Object {
        "paddingHorizontal": 8,
      }
    }
  >
    <AtomComponent
      style={
        Object {
          "paddingTop": 8,
        }
      }
      weight="bold"
    />
    <AtomComponent
      style={
        Object {
          "paddingTop": 8,
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "paddingTop": 8,
      }
    }
  >
    <AtomComponent
      crop="fill"
      public_id="id"
      width={320}
    />
  </View>
  <AtomComponent
    textAlign="center"
  />
  <View
    style={
      Array [
        Object {
          "paddingTop": 8,
        },
        Object {
          "paddingHorizontal": 8,
        },
      ]
    }
  >
    <AtomComponent
      contentItemId={undefined}
      group={Object {}}
      trackAction="build:app:article:editorialsectioncta"
    >
      <AtomComponent
        color="secondary"
        style={
          Object {
            "alignSelf": "flex-start",
            "borderColor": "#B1B2B4",
            "borderWidth": 1,
            "padding": 8,
          }
        }
        text="test"
        weight="bold"
      />
    </AtomComponent>
  </View>
</View>
`;

exports[`EditorialBlob component should render correctly with media_video 1`] = `
<View>
  <View
    style={
      Object {
        "paddingHorizontal": 8,
      }
    }
  >
    <AtomComponent
      style={
        Object {
          "paddingTop": 8,
        }
      }
      weight="bold"
    />
    <AtomComponent
      style={
        Object {
          "paddingTop": 8,
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "paddingTop": 8,
      }
    }
  >
    <View>
      <Text>
        Could not load video.
      </Text>
    </View>
  </View>
  <AtomComponent
    textAlign="center"
  />
  <View
    style={
      Array [
        Object {
          "paddingTop": 8,
        },
        Object {
          "paddingHorizontal": 8,
        },
      ]
    }
  >
    <AtomComponent
      contentItemId={undefined}
      group={Object {}}
      trackAction="build:app:article:editorialsectioncta"
    >
      <AtomComponent
        color="secondary"
        style={
          Object {
            "alignSelf": "flex-start",
            "borderColor": "#B1B2B4",
            "borderWidth": 1,
            "padding": 8,
          }
        }
        text="test"
        weight="bold"
      />
    </AtomComponent>
  </View>
</View>
`;
